deployment/credit-evaluation-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-evaluation-deployment
  labels:
    app: credit-evaluation-deployment
spec:
  selector:
    matchLabels:
      app: credit-evaluation-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: credit-evaluation-deployment
    spec:
      containers:
        - name: credit-evaluation
          image: quasaride/prestabanco-credit-evaluation
          ports:
            - containerPort: 8091
