deployment/credit-follow-up-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-follow-up-deployment
  labels:
    app: credit-follow-up-deployment
spec:
  selector:
    matchLabels:
      app: credit-follow-up-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: credit-follow-up-deployment
    spec:
      containers:
        - name: credit-follow-up
          image: quasaride/prestabanco-credit-follow-up
          ports:
            - containerPort: 8091
