deployment/loan-type-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-type
  labels:
    app: loan-type-deployment
spec:
  selector:
    matchLabels:
      app: loan-type-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: loan-type-pod
    spec:
      containers:
        - name: loan-type
          image: quasaride/prestabanco-loan-type
          ports:
            - containerPort: 8091
