deployment/register-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register
  labels:
    app: register-deployment
spec:
  selector:
    matchLabels:
      app: register-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: register-pod
    spec:
      containers:
        - name: register
          image: quasaride/prestabanco-register
          ports:
            - containerPort: 8091
