deployment/config-server-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  labels:
    app: config-server-deployment
spec:
  selector:
    matchLabels:
      app: config-server-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server-deployment
    spec:
      containers:
        - name: config-server
          image: quasairde/prestabanco-config
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  labels:
    app: config-server-service
spec:
  selector:
    app: config-server-deployment
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
