deployment/credit-application-db-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-application-db-deployment
  labels:
    app: credit-application-db-deployment
    tier: database
spec:
  selector:
    matchLabels:
      app: credit-application-db-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: credit-application-db-deployment
        tier: database
    spec:
      containers:
        - name: credit-application-db
          image: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: credit-application-db-data
      volumes:
        - name: credit-application-db-data
          persistentVolumeClaim:
            claimName: credit-application-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: credit-application-db-service
  labels:
    app: credit-application-db-service
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: credit-application-db-deployment
    tier: database
  type: LoadBalancer
