deployment/eureka-server-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  labels:
    app: eureka-server-deployment
spec:
  selector:
    matchLabels:
      app: eureka-server-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server-deployment
    spec:
      containers:
        - name: eureka-server
          image: quasaride/prestabanco-eureka
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
  labels:
    app: eureka-server-service
spec:
  selector:
    app: eureka-server-deployment
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: LoadBalancer
