deployment/loan-type-db-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-type-db-deployment
  labels:
    app: loan-type-db-deployment
    tier: database
spec:
  selector:
    matchLabels:
      app: loan-type-db-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: loan-type-db-deployment
        tier: database
    spec:
      containers:
        - name: loan-type-db
          image: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: loan-type-db-data
      volumes:
        - name: loan-type-db-data
          persistentVolumeClaim:
            claimName: loan-type-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loan-type-db-service
  labels:
    app: loan-type-db-service
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: loan-type-db-deployment
    tier: database
  type: LoadBalancer
