deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prestabanco-ingress
spec:
  rules:
    - host: 172.21.94.227.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: gateway-server-service
                port:
                  number: 8080
